--- a/login.html
+++ b/login.html
@@ -39,9 +39,9 @@
     </header>
 
     <main class="pt-24 pb-16 max-w-md mx-auto px-4">
-      <h1 class="text-xl sm:text-2xl font-semibold mb-1">Connexion</h1>
+      <h1 class="text-xl sm:text-2xl font-semibold mb-1">🔐 Connexion</h1>
       <p class="text-xs text-white/60 mb-6">
-        Accédez à votre espace Abi-Collection pour suivre vos commandes et votre profil.
+        Entrez votre email et mot de passe pour accéder à votre compte.
       </p>
 
       <form id="login-form" class="glass-card space-y-4 text-sm">
@@ -68,9 +68,9 @@
         <p id="login-message" class="text-xs text-red-300 min-h-[1.25rem]"></p>
         <button
           type="submit"
-          class="w-full px-4 py-2.5 rounded-full bg-primary text-dark text-sm font-semibold hover:bg-primary/90 transition"
+          class="w-full px-6 py-3 rounded-full bg-primary text-dark text-base font-semibold hover:bg-primary/90 transition shadow-glow flex items-center justify-center gap-2"
         >
-          Se connecter
+          ✅ Se connecter
         </button>
       </form>
 
@@ -79,6 +79,11 @@
         <a href="register.html" class="text-primary hover:text-primary/80">Créer un compte</a>
       </p>
     </main>
+
+    <footer class="border-t border-white/10 mt-10 py-6 text-center text-[11px] text-white/50">
+      <p>Abi-Collection, Kolwezi • RDC</p>
+      <p class="mt-1">Votre élégance, révélée.</p>
+    </footer>
 
     <script src="supabase-config.js"></script>
     <script src="supabase-integration.js"></script>
