--- a/account.html
+++ b/account.html
@@ -36,7 +36,8 @@
           </div>
         </a>
         <div class="flex items-center gap-3 text-xs sm:text-sm">
-          <a href="products.html" class="hover:text-primary transition-colors hidden sm:inline">Boutique</a>
+          <a href="products.html" class="px-3 py-1.5 rounded-full hover:bg-white/5 hover:border hover:border-white/10 transition-colors hidden sm:inline-flex">Boutique</a>
+          <a href="account.html" class="px-3 py-1.5 rounded-full bg-white/5 border border-white/10 text-primary hover:bg-white/10 transition-colors hidden sm:inline-flex">Mon compte</a>
           <a
             href="cart.html"
             class="relative inline-flex items-center gap-1 px-3 py-1.5 rounded-full bg-white/5 border border-white/10 hover:bg-white/10 transition-colors"
@@ -47,6 +48,13 @@
               class="inline-flex items-center justify-center min-w-[16px] h-4 text-[10px] bg-primary text-dark rounded-full px-1 leading-none"
             ></span>
           </a>
+          <a href="login.html" id="nav-login-btn" class="px-3 py-1.5 rounded-full bg-primary text-dark text-xs font-semibold shadow-glow hover:bg-primary/90 transition-colors">
+            Se connecter
+          </a>
+          <button id="nav-user-chip" class="hidden items-center gap-2 px-3 py-1.5 rounded-full bg-white/5 border border-white/10 text-xs hover:bg-white/10 transition-colors">
+            <span id="nav-user-initial" class="w-6 h-6 rounded-full bg-gradient-to-br from-primary/70 to-gold/70 flex items-center justify-center text-[11px] font-semibold text-dark">A</span>
+            <span id="nav-user-name" class="max-w-[90px] truncate"></span>
+          </button>
         </div>
       </nav>
     </header>
@@ -55,9 +63,9 @@
       <section>
         <div class="flex items-center justify-between gap-4 mb-4">
           <div>
-            <h1 class="text-xl sm:text-2xl font-semibold mb-1">Mon profil</h1>
+            <h1 class="text-xl sm:text-2xl font-semibold mb-1">👤 Mon profil</h1>
             <p class="text-xs text-white/60">
-              Gérez vos informations personnelles pour faciliter vos prochaines commandes.
+              Modifiez vos informations ci-dessous et cliquez sur "Mettre à jour" pour enregistrer.
             </p>
           </div>
           <button
@@ -69,6 +77,35 @@
         </div>
 
         <form id="profile-form" class="glass-card space-y-4 text-sm">
+          <!-- Photo de profil -->
+          <div class="flex flex-col items-center gap-3 mb-4 pb-4 border-b border-white/10">
+            <div class="relative">
+              <div id="profile-photo-container" class="w-24 h-24 rounded-full bg-gradient-to-br from-primary/70 to-gold/70 flex items-center justify-center overflow-hidden border-2 border-white/20 shadow-lg cursor-pointer hover:opacity-90 transition" title="Cliquez pour voir en grand">
+                <img id="profile-photo-preview" src="" alt="Photo de profil" class="w-full h-full object-cover hidden" />
+                <span id="profile-photo-initial" class="text-2xl font-semibold text-dark">A</span>
+              </div>
+              <label for="profile-photo-input" class="absolute bottom-0 right-0 w-8 h-8 rounded-full bg-primary text-dark flex items-center justify-center cursor-pointer hover:bg-primary/90 transition shadow-lg border-2 border-white/20 z-10">
+                <span class="text-xs">📷</span>
+              </label>
+              <input id="profile-photo-input" type="file" accept="image/*" class="hidden" />
+            </div>
+            <div class="text-center">
+              <p class="text-xs text-white/70 mb-1">Photo de profil</p>
+              <p class="text-[10px] text-white/50 mb-2">Cliquez sur la photo pour voir en grand • 📷 pour changer</p>
+              <button type="button" id="profile-photo-remove" class="text-[10px] text-red-300 hover:text-red-200 hidden">Supprimer la photo</button>
+            </div>
+          </div>
+
+          <!-- Modal pour afficher la photo en grand -->
+          <div id="photo-modal" class="fixed inset-0 bg-black/90 z-50 flex items-center justify-center hidden">
+            <div class="relative max-w-4xl max-h-[90vh] p-4">
+              <button id="photo-modal-close" class="absolute top-4 right-4 w-10 h-10 rounded-full bg-white/10 hover:bg-white/20 flex items-center justify-center text-white text-xl transition z-10">
+                ✕
+              </button>
+              <img id="photo-modal-image" src="" alt="Photo de profil" class="max-w-full max-h-[90vh] rounded-2xl shadow-2xl object-contain" />
+            </div>
+          </div>
+
           <div class="grid sm:grid-cols-2 gap-3">
             <div>
               <label class="block text-xs text-white/70 mb-1" for="profile-name">Nom complet</label>
@@ -77,7 +114,7 @@
             <div>
               <label class="block text-xs text-white/70 mb-1" for="profile-email">Email</label>
               <input id="profile-email" type="email" class="input-glass bg-white/10" disabled />
-              <p class="text-[10px] text-white/50 mt-1">L’email sert d’identifiant et ne peut pas être modifié.</p>
+              <p class="text-[10px] text-white/50 mt-1">L'email sert d'identifiant et ne peut pas être modifié.</p>
             </div>
           </div>
           <div class="grid sm:grid-cols-2 gap-3">
@@ -93,9 +130,9 @@
           <p id="profile-message" class="text-xs text-primary min-h-[1.25rem]"></p>
           <button
             type="submit"
-            class="w-full sm:w-auto px-4 py-2 rounded-full bg-primary text-dark text-sm font-semibold hover:bg-primary/90 transition"
+            class="w-full sm:w-auto px-6 py-3 rounded-full bg-primary text-dark text-base font-semibold hover:bg-primary/90 transition shadow-glow flex items-center justify-center gap-2"
           >
-            Mettre à jour le profil
+            💾 Mettre à jour le profil
           </button>
         </form>
       </section>
@@ -103,14 +140,19 @@
       <section>
         <div class="flex items-center justify-between gap-3 mb-3">
           <div>
-            <h2 class="text-lg font-semibold">Mes commandes</h2>
-            <p class="text-xs text-white/60">Historique de vos commandes passées chez Abi-Collection.</p>
+            <h2 class="text-lg font-semibold">📦 Mes commandes</h2>
+            <p class="text-xs text-white/60">Voici toutes vos commandes passées. Cliquez pour voir les détails.</p>
           </div>
         </div>
 
         <div id="orders-list" class="space-y-3 text-xs"></div>
       </section>
     </main>
+
+    <footer class="border-t border-white/10 mt-10 py-6 text-center text-[11px] text-white/50">
+      <p>Abi-Collection, Kolwezi • RDC</p>
+      <p class="mt-1">Votre élégance, révélée.</p>
+    </footer>
 
     <script src="supabase-config.js"></script>
     <script src="supabase-integration.js"></script>
